--- a/letao-server/package.json
+++ b/letao-server/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "debug": "^4.1.1",
     "dotenv": "^10.0.0",
     "joi": "^17.4.2",
@@ -25,7 +26,9 @@
     "koa-views": "^6.2.0",
     "mysql": "^2.18.1",
     "pug": "^2.0.3",
-    "tencentcloud-sdk-nodejs": "^4.0.218"
+    "qrcode": "^1.4.4",
+    "tencentcloud-sdk-nodejs": "^4.0.218",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
